add and modified the update functionality with validation

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -10,11 +10,11 @@
   },
   {
     "id": "911d69d4-9892-4038-aa0a-3e710d497ffa",
-    "title": "Title 2",
-    "description": "Description 2",
-    "due_date": "2025-09-03",
-    "priority": "high",
-    "status": "todo",
+    "title": "Title 2 updated",
+    "description": "Description 2 updated\"",
+    "due_date": "2025-10-23",
+    "priority": "medium",
+    "status": "done",
     "created_on": "2025-08-27"
   },
   {
